<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="output" Id="{1c6cab42-7a5a-4c64-ab3e-7703b4e9e671}">
    <Declaration><![CDATA[// Each chunk or parent node can produce either an 8-word chaining value or, by
// setting the ROOT flag, any number of final output bytes. The Output struct
// captures the state just prior to choosing between those two possibilities.
TYPE output :
STRUCT
    input_chaining_value : ARRAY [0..7] OF DWORD; (* 8 x 32-bit unsigned *)
    block_words          : ARRAY [0..15] OF DWORD; (* 16 x 32-bit unsigned *)
    counter              : DWORD;  (* 64-bit unsigned integer *)
    block_len            : DWORD;  (* 32-bit unsigned integer *)
    flags                : DWORD;  (* 32-bit unsigned integer *)
END_STRUCT
END_TYPE

(*
// Each chunk or parent node can produce either an 8-word chaining value or, by
// setting the ROOT flag, any number of final output bytes. The Output struct
// captures the state just prior to choosing between those two possibilities.
typedef struct output {
  uint32_t input_chaining_value[8];
  uint32_t block_words[16];
  uint64_t counter;
  uint32_t block_len;
  uint32_t flags;
} output;
*)]]></Declaration>
  </DUT>
</TcPlcObject>