<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="ParameterList" Id="{e65949d0-4e02-476c-8957-a555e76e9ee6}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	BLAKE3_OUT_LEN 					: DWORD := 32;
	BLAKE3_KEY_LEN 					: DWORD := 32;
	BLAKE3_BLOCK_LEN 	 			: DWORD := 64;
	BLAKE3_CHUNK_LEN  				: DWORD := 1024;

	MSG_PERMUTATION					: ARRAY[0..15] OF DWORD := [	2, 6,  3,  10, 7, 0,  4,  13,
                                     								1, 11, 12, 5,  9, 14, 15, 8];
	IV								: ARRAY[0..7] OF DWORD := [	16#6A09E667, 16#BB67AE85, 16#3C6EF372, 16#A54FF53A,
																16#510E527F, 16#9B05688C, 16#1F83D9AB, 16#5BE0CD19];
	CHUNK_START 					: DWORD := SHL(1, 0);
	CHUNK_END 						: DWORD := SHL(1, 1);
	PARENT 							: DWORD := SHL(1, 2);
	ROOT 							: DWORD := SHL(1, 3);
	KEYED_HASH 						: DWORD := SHL(1, 4);
	DERIVE_KEY_CONTEXT 				: DWORD := SHL(1, 5);
	DERIVE_KEY_MATERIAL 			: DWORD := SHL(1, 6);

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>